--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        body {
-            background-color: black;
-        }
-    </style>
 </head>
 <body>
-    
+    <!-- Adding heading tags -->
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <h4>Heading 4</h4>
+    <h5>Heading 5</h5>
+
+    <!-- Paragraph tag -->
+    <p>This is a Paragraph</p>
+    <br>
+    <hr>
+    <p><strong><em>This sentence is bold and italic</em></strong></p>
 </body>
 </html>
