--- a/index.html
+++ b/index.html
@@ -18,5 +18,18 @@
     <br>
     <hr>
     <p><strong><em>This sentence is bold and italic</em></strong></p>
+
+    <!-- Anchor tag -->
+    <a href="https://www.google.co.in/" target="_blank">Google</a>
+    <br>
+    <a href="./page.html">Link to another page</a>
+    <br>
+    <img src="https://img.freepik.com/free-photo/creative-crystal-lens-ball-photography-lake-with-greenery-around-dawn_181624-29379.jpg" alt="Preview image">
+    <!-- <audio src=""></audio> -->
+    <hr>
+    <video controls>
+        <source src="./doremon.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
 </body>
 </html>
