--- a/index.html
+++ b/index.html
@@ -27,9 +27,28 @@
     <img src="https://img.freepik.com/free-photo/creative-crystal-lens-ball-photography-lake-with-greenery-around-dawn_181624-29379.jpg" alt="Preview image">
     <!-- <audio src=""></audio> -->
     <hr>
-    <video controls>
+    <video width="200" height="200" controls>
         <source src="./doremon.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
+    <br>
+    <!-- Some tags are inline and block. block means they take up the whole row and go to next line -->
+    <span>My name is </span><h1>Ak</h1>
+
+    <span>H<sub>2</sub>O</span>
+    <p>a<sup>2</sup> + b<sup>2</sup> = c<sup>2</sup></p>
+
+    <!-- Lists -->
+    <ul>
+        <li>Apple</li>
+        <li>Orange</li>
+        <li>Banana</li>
+    </ul>
+
+    <ol>
+        <li>Apple</li>
+        <li>Orange</li>
+        <li>Banana</li>
+    </ol>
 </body>
 </html>
