--- a/page.html
+++ b/page.html
@@ -6,6 +6,25 @@
     <title>Page HTML</title>
 </head>
 <body>
-    <h1>I am another page</h1>
+    <!-- div is a generic container tag -->
+    <!-- <header>I am header tag</header>
+    <main>
+        <section>
+            <div>I am some content</div>
+            <div>I am some more content</div>
+        </section>
+    </main>
+    <footer>I am footer tag</footer> -->
+
+    <form action="/submit">
+        <label for="firstName">First Name</label>
+        <input type="text" id="firstName" name="firstName" required>
+        <br>
+
+        <label for="lastName">Last Name</label>
+        <input type="text" id="lastName" name="lastName" required>
+        <br>
+        <input type="submit" value="Submit">
+    </form>
 </body>
 </html>
