end of html part

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,13 +14,13 @@
                     <a href="#about">About Me</a>
                 </li>
                 <li>
-                    <a href="">Projects</a>
+                    <a href="#projects">Projects</a>
                 </li>
                 <li>
-                    <a href="">Skills</a>
+                    <a href="#skills">Skills</a>
                 </li>
                 <li>
-                    <a href="">Contact</a>
+                    <a href="#contacts">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -38,6 +38,51 @@
                 <p>I am short xD</p>
             </aside>
         </section>
+
+        <!-- Projects section -->
+        <section id = "projects">
+            <h2>My Projects</h2>
+
+            <article>
+                <h3>Weather app</h3>
+                <p>An app to display the weather by the current location.</p>
+            </article>
+
+            <article>
+                <h3>Portfolio app</h3>
+                <p>An app to showcase all details of candidate, which highlights the skills, projects and much more</p>
+            </article>
+
+            <article>
+                <h3>Javascript Bootcamp</h3>
+                <p>A webpage for a month long bootcamp where we learn HTML, CSS and React</p>
+            </article>
+        </section>
+
+        <!-- Skills section -->
+        <section id = "skills">
+            <h2>Skills</h2>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Javascript</li>
+                <li>React</li>
+                <li>DSA</li>
+                <li>Github</li>
+                <li>C++</li>
+            </ul>
+        </section>
+
+        <!-- Contacts -->
+        <section id="contacts">
+            <h2>Contact Me</h2>
+            <p>Email:</p>
+            <p>Mobile:</p>
+        </section>
+
+        <footer>
+            <p>©2024 Akshat's Portfolio. All rights reserved</p>
+        </footer>
     </main>
 </body>
 </html>
