--- a/CSS/index.html
+++ b/CSS/index.html
@@ -43,8 +43,14 @@
 
     <!-- <h1>Welcome to LearnYard</h1> -->
 
-    <div>
-        Welcome to <span>LearnYard</span>
+    <!-- <div class="box">
+        Welcome to LearnYard
+    </div> -->
+
+    <div class="wrapper-typography">
+        <p class="text">
+            Hello World!
+        </p>
     </div>
 </body>
 </html>
