--- a/CSS/index.html
+++ b/CSS/index.html
@@ -47,10 +47,19 @@
         Welcome to LearnYard
     </div> -->
 
-    <div class="wrapper-typography">
+    <!-- <div class="wrapper-typography">
         <p class="text">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint atque dolore, nisi, provident vitae odit magni repudiandae dolor iusto quas amet rem aliquid sequi ex maxime cumque distinctio, animi et hic officiis consectetur necessitatibus? Sed minima ad quod voluptatum minus molestias. Expedita, quos delectus veniam, voluptates qui obcaecati facere perferendis odio vitae quam, tempore consequatur eaque vero soluta nobis dolorem esse eligendi molestias excepturi officiis nam quo ab. Expedita laboriosam illum ducimus earum, mollitia sunt placeat ipsam odio ratione praesentium temporibus. Praesentium cum ipsam iure tempora dignissimos maiores unde ad ratione esse? Fuga harum reiciendis animi expedita nulla quia asperiores, quos id sapiente, unde magni ut incidunt voluptatem autem commodi? Vel quos, qui quod ipsa debitis, accusantium delectus sed adipisci saepe, dicta excepturi! Quaerat incidunt sit nobis. Est nisi optio porro a saepe eos consectetur expedita aliquam exercitationem, iure vero cum beatae unde modi reprehenderit illo blanditiis minima laboriosam fugit ad tempore. Sequi magnam est blanditiis ipsa at a architecto alias expedita incidunt repellendus possimus error quas, explicabo veniam culpa eveniet distinctio harum dignissimos voluptatum sint magni vitae suscipit! Eligendi error quasi libero ab ad dicta nulla consequuntur incidunt itaque, laudantium, dolorem quas tempore voluptates ut provident eos saepe, eaque expedita placeat illo alias! Ex modi maiores ullam doloremque impedit dicta consequuntur velit? Sint delectus ipsam iusto veniam nemo dolore quae omnis sunt voluptatum. Error harum facere numquam ipsa nesciunt laudantium eum voluptas id totam? Error corporis commodi quae voluptatibus, harum tempore dignissimos minus sequi reiciendis eligendi eaque ab nihil alias dicta quibusdam, in repellat maxime adipisci, quis ipsum voluptatum rerum ut ducimus. Quidem optio sequi voluptatum nemo animi aliquid quos? Adipisci commodi, quas aliquid totam excepturi recusandae quia ea odio! Nemo est deserunt, enim, alias totam illo nobis optio porro, ea dolorem incidunt soluta sit! Eos earum ipsa odit eius modi consectetur sint possimus, officia impedit asperiores rem architecto ipsum ab explicabo adipisci laboriosam molestias, aliquam dolor suscipit repudiandae at ducimus quo natus. Fuga pariatur impedit, minus sapiente adipisci provident velit maiores labore itaque sunt. Eligendi exercitationem aut similique. Illo officiis iusto molestias tempore nisi inventore est suscipit delectus, eius quod illum animi. Dicta perferendis, dolorum illum quos veritatis dolorem nulla, aperiam voluptates delectus facilis officia! Deserunt et corporis obcaecati praesentium provident quaerat aperiam perferendis! Saepe quia quaerat distinctio pariatur id odio totam consectetur, ratione minus, atque excepturi illum cupiditate facere? Quas rerum dolores, optio facilis animi mollitia magnam molestiae excepturi explicabo placeat alias saepe. Voluptate, iusto. Inventore illum suscipit exercitationem alias voluptate mollitia doloremque. Officia quasi aliquam culpa optio ex aspernatur temporibus quod assumenda quia porro delectus accusamus magnam officiis molestiae quas unde vel fugiat voluptatibus repellat, rem deserunt, doloremque quis. Est sunt commodi quas numquam soluta recusandae eaque illum fuga ut magni sit nobis vel omnis veniam quibusdam laudantium veritatis minima doloremque nostrum illo labore, dignissimos, ea eos sint. Harum, nesciunt? Suscipit facere quod, dolorum nesciunt corrupti earum adipisci officia harum ea et non vero eveniet similique aspernatur nemo ipsum veritatis voluptate blanditiis porro deserunt officiis eum.
             Hello World!
         </p>
+    </div> -->
+    <!-- <pre>This tag preservers the spaces      and
+line breaks given in a para or sentence
+    </pre> -->
+
+    <div class="wrapper">
+        <div class="box"></div>
+        <div class="box1"></div>
     </div>
 </body>
 </html>
